@startuml US10-DM
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam classAttributeIconSize 0

hide circle
hide methods

class Journalist {
    name: String
    email: String
    phone: String
    pressCardNumber: String
}

class "Political Agent" as PoliticalAgent {
    name: String
    email: String
    nationalIdentityCard: String
    taxIdentificationNumber: String
    politicalFunction: PoliticalFunction
    mandateStart: Date
    mandateEnd: Date
}

class "Declaration of Interests" as Declaration {
    id: String
    name: String
    submissionDate: Date
}

enum DeclarationStatus {
    pending
    validated
    rejected
}

enum Type {
    initial
    regular
    exceptional
}

enum PoliticalFunction {
    minister
    deputy
    councillor
    parishCouncilPresident
    mayor
}

class Income {
    amount: Double
    source: String
    institution: String
    date: Date
}

Journalist "*" -- "*" Income : analyses

PoliticalAgent "*" -- "*" Declaration : has

PoliticalAgent "1" -- "1" PoliticalFunction : has

Declaration "1" -- "1" Type : has
Declaration "1" -- "1" DeclarationStatus : has
Declaration "1" -- "*" Income : has

@enduml
